--- a/templates/index.html
+++ b/templates/index.html
@@ -21,35 +21,39 @@
     <!-- Latest News -->
     <div id="latest-news">
       <h3>Latest Mars News</h3>
-      <h6>{{mars_data.news_title}}</h6>
-      <p>{{mars_data.news_p}}</p>
+      <h6>{{mars.news_title[0]}}</h6>
+      <p>{{mars.news_p[0]}}</p>
     </div>
     
-    <div class="row bg-light">
-      <div class="col-md-8">
+    <div class="row bg-light mb-4 p-.5">
+      <div class="col-md-7">
           <h3>Featured Mars Image</h3>
-          <img src="https://www.jpl.nasa.gov/spaceimages/images/wallpaper/PIA18846-1920x1200.jpg" alt="Featured Image of Mars" width="100%" height="auto">
+          <img src={{mars.image_url}} alt="Featured Image of Mars" width="100%" height="auto">
       </div>
-      <div class="col-md-4">
+      <div class="col-md-5">
         <div class="container border border-dark rounded  mt-2">
           <h6>Current Weather on Mars</h6>
-          <p>{{mars_data.mars_weather}}</p>
+          <p>{{mars.mars_weather}}</p>
         </div>
         <div class="container mt-4">
           <h6>Mars Facts</h6>
-          <p>{DATA_TABLE}</p>
+          <div>{{mars.facts|safe}}</div>
+          
         </div>
       </div>
     </div>
 
-    <div class="row border-bottom">
+    <div class="row border-bottom mb-2">
       <h3>Mars Hemispheres</h3>
+    </div> 
+    <div class="row mx-auto">
+    {% for item in mars.hemisphere_image_urls %}
+    <div class="col-md-6 p-2 text-center">
+    <img src={{item.img_url}} alt="Hemisphere Image" width="80%" height="auto">
+    <h4>{{item.title}}</h4>
     </div>
-    <h1>hi
-      
-    </h1>
-    
-
+    {% endfor %}
+    </div>
   </div>
 </body>
 
